--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<section>
+<section class="tm-hero">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -20,29 +20,29 @@
     <div class="mdc-layout-grid__inner tm-speakers">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex">
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_01.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
           <div>
-            Jiri Fabian
+            To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
-              Lord / TopMonks
+              Satoshi Labs
             </span>
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_02.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
           <div>
-            Zdeněk Cendra
+            To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
-                Founder / CDN77
+                General Bytes
               </span>
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_03.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
           <div>
-            Ondřej Krátký
+            To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
-                CEO / Liftago
+                Blockchain Legal
               </span>
           </div>
         </div>
@@ -58,12 +58,91 @@
             <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
           </div>
           <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">390</span><span class="tm-layout--flex-align-start">Kč</span><a href="" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
+            <span class="tm-strip__info_figure">390</span>
+            <span class="tm-layout--flex-align-start">Kč</span>
+            <a href="" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+</section>
+
+<section>
+  <div class="tm-layout-wrapper mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+        <img src="../images/img_about_01.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone tm-section">
+        <h2>Co je #monkstage?</h2>
+        <ul class="tm-section__content">
+          <li>
+            <h3>Neformální talkshow o businessu</h3>
+            <p>Na #monkstage vždy přivítáme 3 hosty z oboru, kteří mají k danému tématu rozhodně co říct. Večerem vás provede moderátor, který nejdřívě jednotlivé hosty představí a vyzpovídá; potom rozvíří vášnivou diskuzi. </p>
+          </li>
+          <li>
+            <h3>K věci a bez bullshitu</h3>
+            <p>#monkstage je především o zajímavých hostech. Zakládáme si na tom, aby se k divákům kromě zábavy dostaly hlavně nové a zajímavé informace; žádné dojemné příběhy o úspěších a pádech; žádné promo jednotlivců nebo firem. </p>
+            <p>Jak to na #monkstage vypadá? <a href="" class="tm-btn">galerie</a></p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="tm-layout-wrapper mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone tm-section">
+        <h2>Proč si akci nenechat ujít?</h2>
+        <ul class="tm-section__content">
+          <li>
+            <h3>Získáš nové informace</h3>
+            <p>Hosty na #monkstage vybíráme v prvé řadě tak, aby za sebou měli dostatek zkušeností a byli dostatečně různorodí. Snažíme se vždy přivést na stage někoho, kdo se normálně na konferencích a jiných akcích neobjevuje. Moderátor je vždy člověk z oboru. </p>
+          </li>
+          <li>
+            <h3>Poznáš nové lidi a popovídáš si s hosty u piva</h3>
+            <p>Na poslední #monkstage přišlo přes 140 lidí z oboru - z malých, velkých i ještě nezaložených firem. Připoj se k nim příště taky, pobav se s nimi po skončení talkshow u piva nebo u vína a využij možnost popovídat si osobně i s jednotlivými hosty.</p>
+          </li>
+          <li>
+            <h3>Pobavíš se</h3>
+            <p>Ačkoli je #monkstage hlavně o zajímavých informacích a novinkách z oboru, nezapomínáme na zábavu a uvolněnou atmosféru. Ta jde koneckonců skvěle vidět na videu z poslední akce.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+        <img src="../images/img_about_02.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="tm-layout-wrapper mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-text--center">
+        <h2>Předchozí #monkstage</h2>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
+        <img src="../images/img_about_03.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <h3>Startup edition / 24.10.2018</h3>
+        <p>Na pilotní #monkstage, která se věnovala rozjetým startupům se sešli Jirka Fabián z TopMonks, Ondra Krátký z Liftaga a Zdeněk Cendra z CDN77. Každý z jiného oboru - Startup Studio / Doprava / Technologie a Servery.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
+        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="Jiří Fabián"></a>
+        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="Jiří Fabián"></a>
+        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="Jiří Fabián"></a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <img src="../images/img_gallery.png" class="tm-img--fullwidth" />
 </section>
 
 <section>
