--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -14,7 +14,7 @@
         <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Během nich si již několikrát projelo horskou dráhou nadšení a deprese. Pod nánosem mýtů o splasklé bublině roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. První hardwarová peněženka, dominantní hráč na poli kryptoměnových bankomatů, nebo  blockchainoví advokáti - aneb Satoshi Labs, General Bytes a Blockchain Legal. S jejich zakladateli v uvolněné atmosféře probereme, jaké to je podnikat v odvětví kryptoaktiv, co je motivuje, nebo jakým čelí překážkám v čase bear marketu.</p>
+        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext" target="_blank">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-speakers">
@@ -52,7 +52,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
         <div class="tm-strip">
           <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />19:00
+            <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />20:00
           </div>
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
@@ -145,62 +145,62 @@
   <img src="../images/img_gallery.png" class="tm-img--fullwidth" />
 </section>
 
-<section>
-  <div class="tm-layout-wrapper mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-text--center">
-        <h2>Jak se na #monkstage líbilo pozvaným hostům?</h2>
-      </div>
-      <blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet tm-box tm-box--testimonial">
-        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-        <hr/>
-        <footer class="tm-speaker">
-          <img class="tm-speaker__img tm-speaker__img--testimonial" src="../images/img_speaker_01.png" alt="Jiří Fabián">
-          <cite class="tm-speaker__author">Jiří Fabián <span class="tm-text--subtext tm-layout--display-block">Lord / TopMonks</span></cite>
-        </footer>
-      </blockquote>
-      <blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet tm-box tm-box--testimonial">
-        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-        <hr/>
-        <footer class="tm-speaker">
-          <img class="tm-speaker__img tm-speaker__img--testimonial" src="../images/img_speaker_02.png" alt="Zdeněk Cendra">
-          <cite class="tm-speaker__author">Zdeněk Cendra <span class="tm-text--subtext tm-layout--display-block">Founder / CDN77</span></cite>
-        </footer>
-      </blockquote>
-      <blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet tm-box tm-box--testimonial">
-        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
-        <hr/>
-        <footer class="tm-speaker">
-          <img class="tm-speaker__img tm-speaker__img--testimonial" src="../images/img_speaker_03.png" alt="Ondřej Krátký">
-          <cite class="tm-speaker__author">Ondřej Krátký <span class="tm-text--subtext tm-layout--display-block">CEO / Liftago</span></cite>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="mdc-layout-grid__inner tm-layout--margin-top">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h3>#monkstage v médiích</h3>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text--subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>
-      </div>
-    </div>
-  </div>
-</section>
+<!--<section>-->
+  <!--<div class="tm-layout-wrapper mdc-layout-grid">-->
+    <!--<div class="mdc-layout-grid__inner">-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12 tm-text&#45;&#45;center">-->
+        <!--<h2>Jak se na #monkstage líbilo pozvaným hostům?</h2>-->
+      <!--</div>-->
+      <!--<blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet tm-box tm-box&#45;&#45;testimonial">-->
+        <!--<p>Startup Stage byl velmi přirozený mix start-upových zkušeností na pódiu i dotazů z hlediště. Je fajn nasdílet, co jsme se jako lidi nebo firmy bolestivě naučili.</p>-->
+        <!--<hr/>-->
+        <!--<footer class="tm-speaker">-->
+          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_01.png" alt="Jiří Fabián">-->
+          <!--<cite class="tm-speaker__author">Jiří Fabián <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">Lord / TopMonks</span></cite>-->
+        <!--</footer>-->
+      <!--</blockquote>-->
+      <!--<blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet tm-box tm-box&#45;&#45;testimonial">-->
+        <!--<p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>-->
+        <!--<hr/>-->
+        <!--<footer class="tm-speaker">-->
+          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_02.png" alt="Zdeněk Cendra">-->
+          <!--<cite class="tm-speaker__author">Zdeněk Cendra <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">Founder / CDN77</span></cite>-->
+        <!--</footer>-->
+      <!--</blockquote>-->
+      <!--<blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet tm-box tm-box&#45;&#45;testimonial">-->
+        <!--<p>Startup Stage byl velmi přirozený mix start-upových zkušeností na pódiu i dotazů z hlediště. Je fajn nasdílet, co jsme se jako lidi nebo firmy bolestivě naučili.</p>-->
+        <!--<hr/>-->
+        <!--<footer class="tm-speaker">-->
+          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_03.png" alt="Ondřej Krátký">-->
+          <!--<cite class="tm-speaker__author">Ondřej Krátký <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">CEO / Liftago</span></cite>-->
+        <!--</footer>-->
+      <!--</blockquote>-->
+    <!--</div>-->
+    <!--<div class="mdc-layout-grid__inner tm-layout&#45;&#45;margin-top">-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12">-->
+        <!--<h3>#monkstage v médiích</h3>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+      <!--<div class="mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-4 mdc-layout-grid__cell&#45;&#45;span-8-tablet">-->
+        <!--<p>CeskyRozhlas, Aktualne, Lupa, TyInternety<br/><span class="tm-text&#45;&#45;subtext"><a href="">Tyinternety</a> / 22.10.2018</span></p>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</section>-->
 
 <section>
   <div class="tm-layout-wrapper mdc-layout-grid">
@@ -211,7 +211,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="tm-strip">
           <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />19:00
+            <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />20:00
           </div>
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
