--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -60,7 +60,7 @@
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">390</span>
             <span class="tm-layout--flex-align-start">Kč</span>
-            <a href="" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
+            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
   </div>
 </section>
 
-<section>
+<section id="o-akci">
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
@@ -84,7 +84,7 @@
           <li>
             <h3>K věci a bez bullshitu</h3>
             <p>#monkstage je především o zajímavých hostech. Zakládáme si na tom, aby se k divákům kromě zábavy dostaly hlavně nové a zajímavé informace; žádné dojemné příběhy o úspěších a pádech; žádné promo jednotlivců nebo firem. </p>
-            <p>Jak to na #monkstage vypadá? <a href="" class="tm-btn">galerie</a></p>
+            <p>Jak to na #monkstage vypadá? <a href="https://www.facebook.com/pg/topmonks/photos/?tab=album&album_id=2145414112144668" titile="Facebook fotogalerie z #monkstage startup edition" class="tm-btn">galerie</a></p>
           </li>
         </ul>
       </div>
@@ -133,9 +133,9 @@
         <p>Na pilotní #monkstage, která se věnovala rozjetým startupům se sešli Jirka Fabián z TopMonks, Ondra Krátký z Liftaga a Zdeněk Cendra z CDN77. Každý z jiného oboru - Startup Studio / Doprava / Technologie a Servery.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
-        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="Jiří Fabián"></a>
-        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="Jiří Fabián"></a>
-        <a href=""><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="Jiří Fabián"></a>
+        <a href="https://www.linkedin.com/in/jirifabian/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="[foto] Jiří Fabián"></a>
+        <a href="https://www.linkedin.com/in/ondrejkratky/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="[foto] Ondřej Krátký"></a>
+        <a href="https://www.linkedin.com/in/cendra/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="[foto] Zdeněk Cendra"></a>
       </div>
     </div>
   </div>
@@ -217,7 +217,9 @@
             <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
           </div>
           <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">390</span><span class="tm-layout--flex-align-start">Kč</span><a href="" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
+            <span class="tm-strip__info_figure">390</span>
+            <span class="tm-layout--flex-align-start">Kč</span>
+            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webfooter" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
           </div>
         </div>
       </div>
