--- a/monkstage.topmonks.com/src/html/shared/header.html
+++ b/monkstage.topmonks.com/src/html/shared/header.html
@@ -44,9 +44,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="#about-event">o akci</a></li>
-            <li class=""><a href="#contacts">kontakty</a></li>
-            <li class=""><a class="tm-btn" href="/">koupit vstupenky</a></li>
+            <li class="#o-akci"><a href="#o-akci">o akci</a></li>
+            <li class="#kontakty"><a href="#kontakty">kontakty</a></li>
+            <li class="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webmenu"><a class="tm-btn" href="/">koupit vstupenky</a></li>
           </ul>
         </nav>
       </div>
