--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -14,13 +14,13 @@
         <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext" target="_blank">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
+        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-speakers">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex">
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
           <div>
             To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
           <div>
             To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png">
+          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
           <div>
             To be Announced
             <span class="tm-text--subtext tm-layout--display-block">
