Google Analytics tracking events

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -2,7 +2,7 @@
 {% from 'macros/helpers.html' import sprite %}
 
 {% block title %}
-#monkstage
+#monkstage Blockchain Edition | TopMonks
 {% endblock %}
 
 
@@ -60,7 +60,9 @@
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">390</span>
             <span class="tm-layout--flex-align-start">Kč</span>
-            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
+            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader"
+               class="tm-btn tm-btn--inverse ga-track"
+               data-label="Header">koupit vstupenky</a>
           </div>
         </div>
       </div>
@@ -219,7 +221,9 @@
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">390</span>
             <span class="tm-layout--flex-align-start">Kč</span>
-            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webfooter" class="tm-btn tm-btn--inverse">koupit vstupenky</a>
+            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webfooter"
+               class="tm-btn tm-btn--inverse ga-track"
+               data-label="Footer">koupit vstupenky</a>
           </div>
         </div>
       </div>
