--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -13,12 +13,12 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-speakers">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex-desktop">
         <div class="tm-speaker">
           <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
           <div>
@@ -49,20 +49,22 @@
       </div>
     </div>
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
-        <div class="tm-strip">
-          <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />20:00
-          </div>
-          <div class="tm-strip__info">
-            <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
-          </div>
-          <div class="tm-strip__info">
-            <span class="tm-strip__info_figure">390</span>
-            <span class="tm-layout--flex-align-start">Kč</span>
-            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader"
-               class="tm-btn tm-btn--inverse ga-track"
-               data-label="Header">koupit vstupenky</a>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="tm-layout-helper">
+          <div class="tm-strip">
+            <div class="tm-strip__info">
+              <span class="tm-strip__info_figure">3.</span> Dubna 2019 <br />20:00
+            </div>
+            <div class="tm-strip__info">
+              <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
+            </div>
+            <div class="tm-strip__info">
+              <span class="tm-strip__info_figure">390</span>
+              <span class="tm-layout--flex-align-start tm-layout--margin-right">Kč</span>
+              <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader"
+                 class="tm-btn tm-btn--inverse ga-track"
+                 data-label="Header">koupit vstupenky</a>
+            </div>
           </div>
         </div>
       </div>
@@ -86,7 +88,7 @@
           <li>
             <h3>K věci a bez bullshitu</h3>
             <p>#monkstage je především o zajímavých hostech. Zakládáme si na tom, aby se k divákům kromě zábavy dostaly hlavně nové a zajímavé informace; žádné dojemné příběhy o úspěších a pádech; žádné promo jednotlivců nebo firem. </p>
-            <p>Jak to na #monkstage vypadá? <a href="https://www.facebook.com/pg/topmonks/photos/?tab=album&album_id=2145414112144668" titile="Facebook fotogalerie z #monkstage startup edition" class="tm-btn">galerie</a></p>
+            <p><span class="tm-layout--margin-right">Jak to na #monkstage vypadá?</span> <a href="https://www.facebook.com/pg/topmonks/photos/?tab=album&album_id=2145414112144668" titile="Facebook fotogalerie z #monkstage startup edition" class="tm-btn">galerie</a></p>
           </li>
         </ul>
       </div>
@@ -135,9 +137,12 @@
         <p>Na pilotní #monkstage, která se věnovala rozjetým startupům se sešli Jirka Fabián z TopMonks, Ondra Krátký z Liftaga a Zdeněk Cendra z CDN77. Každý z jiného oboru - Startup Studio / Doprava / Technologie a Servery.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
-        <a href="https://www.linkedin.com/in/jirifabian/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="[foto] Jiří Fabián"></a>
-        <a href="https://www.linkedin.com/in/ondrejkratky/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="[foto] Ondřej Krátký"></a>
-        <a href="https://www.linkedin.com/in/cendra/"><img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="[foto] Zdeněk Cendra"></a>
+        <a href="https://www.linkedin.com/in/jirifabian/" title="LinkedIn profil Jiřího Fabiána">
+          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="[foto] Jiří Fabián"></a>
+        <a href="https://www.linkedin.com/in/ondrejkratky/" title="LinkedIn profil Ondřeje Krátkého">
+          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="[foto] Ondřej Krátký"></a>
+        <a href="https://www.linkedin.com/in/cendra/" title="LinkedIn profil Zdeňka Cendry">
+          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="[foto] Zdeněk Cendra"></a>
       </div>
     </div>
   </div>
@@ -220,7 +225,7 @@
           </div>
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">390</span>
-            <span class="tm-layout--flex-align-start">Kč</span>
+            <span class="tm-layout--flex-align-start tm-layout--margin-right">Kč</span>
             <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webfooter"
                class="tm-btn tm-btn--inverse ga-track"
                data-label="Footer">koupit vstupenky</a>
