speakers info and images updated

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -20,27 +20,27 @@
     <div class="mdc-layout-grid__inner tm-speakers">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex-desktop">
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
+          <img class="tm-speaker__img" src="../images/img_speaker_04.png" alt="foto Marek Palatinus">
           <div>
-            To be Announced
+            Marek Palatinus
             <span class="tm-text--subtext tm-layout--display-block">
               Satoshi Labs
             </span>
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
+          <img class="tm-speaker__img" src="../images/img_speaker_05.png" alt="foto Karel Kyovský">
           <div>
-            To be Announced
+            Karel Kyovský
             <span class="tm-text--subtext tm-layout--display-block">
                 General Bytes
               </span>
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker-placeholder.png" alt="speaker bude oznámen">
+          <img class="tm-speaker__img" src="../images/img_speaker_06.png" alt="foto Radim Kozub">
           <div>
-            To be Announced
+            Radim Kozub
             <span class="tm-text--subtext tm-layout--display-block">
                 Blockchain Legal
               </span>
