og:image and small layout fixes

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -5,6 +5,18 @@
 #monkstage Blockchain Edition | TopMonks
 {% endblock %}
 
+{% block head %}
+<meta name="description" content="Na #monkstage vždy přivítáme 3 hosty z oboru, kteří mají k danému tématu rozhodně co říct. Večerem vás provede moderátor, který nejdřívě jednotlivé hosty představí a vyzpovídá; potom rozvíří vášnivou diskuzi. ">
+<meta name="twitter:description" property="og:description" content="Na #monkstage vždy přivítáme 3 hosty z oboru, kteří mají k danému tématu rozhodně co říct. Večerem vás provede moderátor, který nejdřívě jednotlivé hosty představí a vyzpovídá; potom rozvíří vášnivou diskuzi. ">
+<link rel="canonical" href="https://monkstage.topmonks.com/">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@topmonks">
+<meta name="twitter:title" property="og:title" content="#monkstage Blockchain Edition | TopMonks">
+<meta name="twitter:image" property="og:image" content="og-image.png">
+<meta property="og:type" content="event">
+<meta property="og:url" content="https://monkstage.topmonks.com/">
+<meta property="og:site_name" content="#monkstage">
+{% endblock %}
 
 {% block content %}
 <section class="tm-hero">
