--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@topmonks">
 <meta name="twitter:title" property="og:title" content="#monkstage Blockchain Edition | TopMonks">
-<meta name="twitter:image" property="og:image" content="og-image.png">
+<meta name="twitter:image" property="og:image" content="https://monkstage.topmonks.com/og-image.png">
 <meta property="og:type" content="event">
 <meta property="og:url" content="https://monkstage.topmonks.com/">
 <meta property="og:site_name" content="#monkstage">
