big images are served from cloudinary, tweeks for responsive behaviour

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -87,10 +87,13 @@
 <section id="o-akci">
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-        <img src="../images/img_about_01.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <img class="tm-img--fullwidth tm-img--gallery" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png"
+             srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png 1x,
+                      https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_2,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png 2x"
+             alt="foto z #monkstage" />
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone tm-section">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone tm-section">
         <h2>Co je #monkstage?</h2>
         <ul class="tm-section__content">
           <li>
@@ -100,7 +103,7 @@
           <li>
             <h3>K věci a bez bullshitu</h3>
             <p>#monkstage je především o zajímavých hostech. Zakládáme si na tom, aby se k divákům kromě zábavy dostaly hlavně nové a zajímavé informace; žádné dojemné příběhy o úspěších a pádech; žádné promo jednotlivců nebo firem. </p>
-            <p><span class="tm-layout--margin-right">Jak to na #monkstage vypadá?</span> <a href="https://www.facebook.com/pg/topmonks/photos/?tab=album&album_id=2145414112144668" titile="Facebook fotogalerie z #monkstage startup edition" class="tm-btn">galerie</a></p>
+            <p><span class="tm-layout--margin-right" style="margin-bottom: 1em; display: inline-block;">Jak to na #monkstage vypadá?</span> <a href="https://www.facebook.com/pg/topmonks/photos/?tab=album&album_id=2145414112144668" titile="Facebook fotogalerie z #monkstage startup edition" class="tm-btn">galerie</a></p>
           </li>
         </ul>
       </div>
@@ -111,7 +114,7 @@
 <section>
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone tm-section">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone tm-section">
         <h2>Proč si akci nenechat ujít?</h2>
         <ul class="tm-section__content">
           <li>
@@ -128,8 +131,13 @@
           </li>
         </ul>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-        <img src="../images/img_about_02.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+          <img class="tm-img--fullwidth tm-img--gallery" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png"
+               srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png 1x,
+                      https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_2,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png 2x"
+               alt="foto z #monkstage" />
+        </div>
       </div>
     </div>
   </div>
@@ -141,14 +149,14 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-text--center">
         <h2>Předchozí #monkstage</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
-        <img src="../images/img_about_03.png" class="tm-img--fullwidth" alt="foto z #monkstage">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <img src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto/v1549630586/monkstage.topmonks.com/img_about_03.png" class="tm-img--fullwidth" alt="foto z #monkstage">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>Startup edition / 24.10.2018</h3>
         <p>Na pilotní #monkstage, která se věnovala rozjetým startupům se sešli Jirka Fabián z TopMonks, Ondra Krátký z Liftaga a Zdeněk Cendra z CDN77. Každý z jiného oboru - Startup Studio / Doprava / Technologie a Servery.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
         <a href="https://www.linkedin.com/in/jirifabian/" title="LinkedIn profil Jiřího Fabiána">
           <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="[foto] Jiří Fabián"></a>
         <a href="https://www.linkedin.com/in/ondrejkratky/" title="LinkedIn profil Ondřeje Krátkého">
@@ -160,8 +168,11 @@
   </div>
 </section>
 
-<section>
-  <img src="../images/img_gallery.png" class="tm-img--fullwidth" />
+<section class="tm-img--fullwidth-wrapper">
+  <img class="tm-img--fullwidth tm-img--gallery" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_1915/monkstage.topmonks.com/img_gallery.png"
+       srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_1915/monkstage.topmonks.com/img_gallery.png 1x,
+                      https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_2,w_1915/monkstage.topmonks.com/img_gallery.png 2x"
+       alt="fotogalerie z minulé Monk Stage" />
 </section>
 
 <!--<section>-->
