--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/index.html' %}
-{% from 'macros/helpers.html' import sprite %}
+{% from 'macros/helpers.html' import speakerImage %}
 
 {% block title %}
 #monkstage Blockchain Edition | TopMonks
@@ -32,7 +32,7 @@
     <div class="mdc-layout-grid__inner tm-speakers">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex-desktop">
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_04.png" alt="foto Marek Palatinus">
+          {{ speakerImage("marek_platinus","Marek Platinus", "80", "v1549638123/")}}
           <div>
             Marek Palatinus
             <span class="tm-text--subtext tm-layout--display-block">
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_05.png" alt="foto Karel Kyovský">
+          {{ speakerImage("karel_kyovsky","Karel Kyovský", "80", "v1549638123/")}}
           <div>
             Karel Kyovský
             <span class="tm-text--subtext tm-layout--display-block">
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="tm-speaker">
-          <img class="tm-speaker__img" src="../images/img_speaker_06.png" alt="foto Radim Kozub">
+          {{ speakerImage("radim_kozub","Radim Kozub", "80", "v1549638123/")}}
           <div>
             Radim Kozub
             <span class="tm-text--subtext tm-layout--display-block">
@@ -158,11 +158,11 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="align-self: center">
         <a href="https://www.linkedin.com/in/jirifabian/" title="LinkedIn profil Jiřího Fabiána">
-          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_01.png" alt="[foto] Jiří Fabián"></a>
+          {{ speakerImage("jiri_fabian","Jiří Fabián", "64", "v1549638123/")}}</a>
         <a href="https://www.linkedin.com/in/ondrejkratky/" title="LinkedIn profil Ondřeje Krátkého">
-          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_02.png" alt="[foto] Ondřej Krátký"></a>
+          {{ speakerImage("ondrej_kratky","Ondřej Krátký", "64", "v1549638123/")}}</a>
         <a href="https://www.linkedin.com/in/cendra/" title="LinkedIn profil Zdeňka Cendry">
-          <img class="tm-speaker__img tm-speaker__img--previous" src="../images/img_speaker_03.png" alt="[foto] Zdeněk Cendra"></a>
+          {{ speakerImage("zdenek_cendra","Zdeněk Cendra", "64", "v1549638123/")}}</a>
       </div>
     </div>
   </div>
@@ -185,7 +185,7 @@
         <!--<p>Startup Stage byl velmi přirozený mix start-upových zkušeností na pódiu i dotazů z hlediště. Je fajn nasdílet, co jsme se jako lidi nebo firmy bolestivě naučili.</p>-->
         <!--<hr/>-->
         <!--<footer class="tm-speaker">-->
-          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_01.png" alt="Jiří Fabián">-->
+          <!--{{ speakerImage("jiri_fabian","Jiří Fabián", "42", "v1549638123/")}}-->
           <!--<cite class="tm-speaker__author">Jiří Fabián <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">Lord / TopMonks</span></cite>-->
         <!--</footer>-->
       <!--</blockquote>-->
@@ -193,7 +193,7 @@
         <!--<p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>-->
         <!--<hr/>-->
         <!--<footer class="tm-speaker">-->
-          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_02.png" alt="Zdeněk Cendra">-->
+          <!--{{ speakerImage("zdenek_cendra","Zdeněk Cendra", "42", "v1549638123/")}}-->
           <!--<cite class="tm-speaker__author">Zdeněk Cendra <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">Founder / CDN77</span></cite>-->
         <!--</footer>-->
       <!--</blockquote>-->
@@ -201,7 +201,7 @@
         <!--<p>Startup Stage byl velmi přirozený mix start-upových zkušeností na pódiu i dotazů z hlediště. Je fajn nasdílet, co jsme se jako lidi nebo firmy bolestivě naučili.</p>-->
         <!--<hr/>-->
         <!--<footer class="tm-speaker">-->
-          <!--<img class="tm-speaker__img tm-speaker__img&#45;&#45;testimonial" src="../images/img_speaker_03.png" alt="Ondřej Krátký">-->
+          <!--{{ speakerImage("ondrej_kratky","Ondřej Krátký", "42", "v1549638123/")}}-->
           <!--<cite class="tm-speaker__author">Ondřej Krátký <span class="tm-text&#45;&#45;subtext tm-layout&#45;&#45;display-block">CEO / Liftago</span></cite>-->
         <!--</footer>-->
       <!--</blockquote>-->
