removing omited classes

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -88,7 +88,7 @@
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <img class="tm-img--fullwidth tm-img--gallery" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png"
+        <img class="tm-img--fullwidth" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png"
              srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png 1x,
                       https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_2,w_510/v1549630586/monkstage.topmonks.com/img_about_01.png 2x"
              alt="foto z #monkstage" />
@@ -133,7 +133,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          <img class="tm-img--fullwidth tm-img--gallery" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png"
+          <img class="tm-img--fullwidth" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_auto,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png 1x,
                       https://res.cloudinary.com/topmonks/image/upload/f_auto,q_auto,dpr_2,w_510/v1549630586/monkstage.topmonks.com/img_about_02.png 2x"
                alt="foto z #monkstage" />
