--- a/monkstage.topmonks.com/src/html/shared/footer.html
+++ b/monkstage.topmonks.com/src/html/shared/footer.html
@@ -32,7 +32,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>O nás</h3>
         <p><a href="https://www.topmonks.cz/" title="web TopMonks">TopMonks</a> je český softwarehouse založený v roce 2011, zkušený s dodáváním komplexních řešení nejen B2B klientům, ale i startupům. Začátkem roku 2018 toto portfolio doplnila nová část firmy, celá dedikovaná technologii blockchain a kryptoaktivům.</p>
-        <p><a href="https://blockchain.topmonks.com/" title="web TopMonks Blockchain">TopMonks Blockchain</a> zastřešuje širokou paletu služeb na míru, od designu a vývoje aplikací, přes bezpečností audity, až po konzultace a případové studie použití blockchainu v businessu.</p>
+        <p><a href="https://blockchain.topmonks.com/" title="web TopMonks Blockchain">TopMonks Blockchain</a> zastřešuje širokou paletu služeb na míru, od designu a vývoje aplikací, přes bezpečnostní audity, až po konzultace a případové studie použití blockchainu v businessu.</p>
       </div>
       <div id="kontakty" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>Důležité kontakty</h3>
