Blockchain: footer - mailto underline

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -517,7 +517,7 @@
             <div itemprop="subOrganization" itemscope=""
                  itemtype="https://schema.org/Organization">
               <span itemprop="legalName">TopMonks s.r.o.</span>
-              <div>
+              <div class="mailto">
                 <a href="mailto:info@topmonks.com" itemprop="email">info@topmonks.com</a>
               </div>
             </div>
