--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -521,11 +521,11 @@
           <h2>Kontakt</h2>
           <p class="description">Přejete si objednat kurz do své firmy? Máte otázky? Napište&nbsp;nám.</p>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
-            <img alt="[foto] David Zábrž" src="https://insight.topmonks.com/avatar/david-zabrz" onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="84" height="84">
+            <img alt="[foto] Jirka Pénzeš" src="https://insight.topmonks.com/avatar/jiri-penzes" onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="84" height="84">
           </div>
           <div style="margin: 0 auto; text-align: center">
-            <a class="mail" href="mailto:david.zabrz&#64;topmonks.com">david.zabrz@topmonks.com</a><br>
-            <a href="tel:608300939">+420 608 300 939</a>
+            <a class="mail" href="mailto:jiri.penzes&#64;topmonks.com">jiri.penzes@topmonks.com</a><br>
+            <a href="tel:732364404">+420 732 364 404</a>
           </div>
         </div>
       </div>
