caffe - topmonks.com

--- a/caffe.topmonks.cz/src/html/v2/index.html
+++ b/caffe.topmonks.cz/src/html/v2/index.html
@@ -69,7 +69,7 @@
             <a href="#speakers">Staňte se řečníky</a>
           </li>
           <li>
-            <a href="https://www.topmonks.cz/">topmonks.cz</a>
+            <a href="https://www.topmonks.cz/">TopMonks.cz</a>
           </li>
         </ul>
       </div>
