TM - header - jobs

--- a/www.topmonks.com/src/html/shared/header.html
+++ b/www.topmonks.com/src/html/shared/header.html
@@ -37,6 +37,7 @@
           <ul class="tm-menu__list">
             <li class=""><a href="/about-us/">about us</a></li>
             <li class=""><a href="/meet-us/">meet us</a></li>
+            <li class=""><a href="/jobs/">jobs</a></li>
             <li class=""><a href="/contact/">contacts</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
